fix navbar logo spacing and mobile bug

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ email address: change color on hover to ;
   overflow: visible;
   width: 100%;
   height: 250px;
-  background: black;
+  background: #004E6A;
   z-index: -1;
   -webkit-transform: skewY(2deg);
   -moz-transform: skewY(2deg);
@@ -71,7 +71,7 @@ email address: change color on hover to ;
   overflow: visible;
   width: 100%;
   height: 250px;
-  background: black;
+  background: #004E6A;
   z-index: -1;
   -webkit-transform: skewY(-2deg);
   -moz-transform: skewY(-2deg);
@@ -115,11 +115,15 @@ email address: change color on hover to ;
   height:68px;
 }
 
+img#brand.navbar-brand {
+  margin-top: -8px;
+}
+
 .navbar-default .navbar-brand {
   color: white;
 }
 
-.navbar-default .navbar-nav>li#brand>a {
+a.navbar-brand {
   color: #FFF;
   font-size: 1.3125em; /* 21 px / 16 px */
   font-weight: 300;
@@ -174,14 +178,12 @@ email address: change color on hover to ;
   color: #6ECFF5;
 }
 
-.carat-container {
-  text-align: center;
+#about {
+  margin-top: 50px;
 }
 
-.caret {
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  border-top: 30px solid #004E6A;
+#work-experiences {
+  padding-bottom: 50px;
 }
 
 hr {
